# LMMpy

./: LICENSE  README.md  setup.cfg  setup.py
LLMpy/: __init__.py
LLMpy/models/: statisticLLM.py
