[metadata]
name = LLMpy
version = 0.1.0
author = AstroQuantumphysicist
author_email = no@email.py
description = LLMpy is a python package that makes it easy to use Large Language Models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
